--- a/Blogs/blogs.html
+++ b/Blogs/blogs.html
@@ -222,9 +222,7 @@
         </div>
       </nav>
     </div>
-    <div class="row blog-main-pic">
-      <img src="./blog-img/main-pic-blogs.png" alt="" class="p-0 img" />
-    </div>
+    <div class="row blog-main-pic"></div>
     <link rel="stylesheet" href="../header.css" />
     <link rel="stylesheet" href="./blogs.css" />
     <!-- header end -->
@@ -303,21 +301,16 @@
           </div>
         </div>
       </div>
-      <div class="hugo-confession">
-        <div class="hugo-confession-img d-flex justify-content-center">
-          <img src="./blog-img/Hugo’s Confessions.png" alt="hugo-confession" />
-        </div>
-        <div class="hugo-confession-content mt-5">
-          <div class="owl-carousel owl-theme">
-            <div class="item">
-              <img src="./blog-img/hugo-academic-1.png" alt="" />
-            </div>
-            <div class="item">
-              <img src="./blog-img/hugo-academic-1.png" alt="" />
-            </div>
-            <div class="item">
-              <img src="./blog-img/hugo-academic-1.png" alt="" />
-            </div>
+    </div>
+    <div class="hugo-confession">
+      <div class="hugo-confession-img d-flex justify-content-center">
+        <img src="./blog-img/Hugo’s Confessions.png" alt="hugo-confession" />
+      </div>
+      <div class="hugo-confession-content">
+        <div id="confessionArea" class="owl-carousel owl-theme">
+          <div class="item">
+            <img src="./blog-img/hugo-academic-1.png" alt="" />
+            <p class="confession-content"></p>
           </div>
         </div>
       </div>
