--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
       href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Montserrat:wght@300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
-
+    <link
+      href="https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
     <!-- Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
@@ -476,305 +479,7 @@
       <img src="./imgs///decor-bg/decor-3-1.png" alt="" class="decor-3-1" />
       <img src="./imgs/decor-bg/decor-4.png" alt="" class="decor-4" />
       <img src="./imgs/decor-bg/decor-4-1.png" alt="" class="decor-4-1" />
-
-      <!-- <div class="container" id="blogArea">
-        <div class="row text-center">
-          <p class="fw-bold blogs-title">BLOGS</p>
-        </div>
-        <div class="hugo-blog mt-5 d-flex">
-          <div
-            class="container d-flex justify-content-between align-items-center"
-          >
-            <span class="hugo-blog-title text-uppercase"> hugo's blog </span>
-            <div class="view-all text-uppercase d-flex align-items-center">
-              view all
-            </div>
-          </div>
-        </div> -->
-      <!-- <div
-          id="carouselExampleControls"
-          class="carousel slide justify-content-between"
-          data-ride="carousel"
-        >
-          <div class="carousel-inner blogs-inner">
-            <div class="carousel-item active">
-              <div class="cards-wrapper">
-                <div class="card-blog card">
-                  <img src="./imgs/Blog_1.png" class="card-img-top" alt="..." />
-                  <div class="card-body">
-                    <span class="card-time">MAY 30, 2022</span>
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">
-                      Some quick example text to build on the card title and
-                      make up the bulk of the card's content.
-                    </p>
-                    <a
-                      href="#"
-                      class="read-part d-flex h-auto text-decoration-none"
-                    >
-                      <p class="read-btn-text">Read more</p>
-                      <p class="read-btn ms-3 m-0">
-                        <i class="fa-solid fa-arrow-right"></i>
-                      </p>
-                    </a>
-                  </div>
-                </div>
-                <div class="card-blog card">
-                  <img src="./imgs/Blog_2.png" class="card-img-top" alt="..." />
-                  <div class="card-body">
-                    <span class="card-time">MAY 30, 2022</span>
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">
-                      Some quick example text to build on the card title and
-                      make up the bulk of the card's content.
-                    </p>
-                    <a
-                      href="#"
-                      class="read-part d-flex h-auto text-decoration-none"
-                    >
-                      <p class="read-btn-text">Read more</p>
-                      <p class="read-btn ms-3 m-0">
-                        <i class="fa-solid fa-arrow-right"></i>
-                      </p>
-                    </a>
-                  </div>
-                </div>
-                <div class="card-blog card">
-                  <img src="./imgs/Blog_3.png" class="card-img-top" alt="..." />
-                  <div class="card-body">
-                    <span class="card-time">MAY 30, 2022</span>
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">
-                      Some quick example text to build on the card title and
-                      make up the bulk of the card's content.
-                    </p>
-                    <a
-                      href="#"
-                      class="read-part d-flex h-auto text-decoration-none"
-                    >
-                      <p class="read-btn-text">Read more</p>
-                      <p class="read-btn ms-3 m-0">
-                        <i class="fa-solid fa-arrow-right"></i>
-                      </p>
-                    </a>
-                  </div>
-                </div>
-                <div class="card-blog card">
-                  <img src="./imgs/Blog_4.png" class="card-img-top" alt="..." />
-                  <div class="card-body">
-                    <span class="card-time">MAY 30, 2022</span>
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">
-                      Some quick example text to build on the card title and
-                      make up the bulk of the card's content.
-                    </p>
-                    <a
-                      href="#"
-                      class="read-part d-flex h-auto text-decoration-none"
-                    >
-                      <p class="read-btn-text">Read more</p>
-                      <p class="read-btn ms-3 m-0">
-                        <i class="fa-solid fa-arrow-right"></i>
-                      </p>
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <div class="cards-wrapper">
-                <div class="card-blog card">
-                  <img src="./imgs/Blog_1.png" class="card-img-top" alt="..." />
-                  <div class="card-body">
-                    <span class="card-time">MAY 30, 2022</span>
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">
-                      Some quick example text to build on the card title and
-                      make up the bulk of the card's content.
-                    </p>
-                    <a
-                      href="#"
-                      class="read-part d-flex h-auto text-decoration-none"
-                    >
-                      <p class="read-btn-text">Read more</p>
-                      <p class="read-btn ms-3 m-0">
-                        <i class="fa-solid fa-arrow-right"></i>
-                      </p>
-                    </a>
-                  </div>
-                </div>
-                <div class="card-blog card">
-                  <img src="./imgs/Blog_2.png" class="card-img-top" alt="..." />
-                  <div class="card-body">
-                    <span class="card-time">MAY 30, 2022</span>
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">
-                      Some quick example text to build on the card title and
-                      make up the bulk of the card's content.
-                    </p>
-                    <a
-                      href="#"
-                      class="read-part d-flex h-auto text-decoration-none"
-                    >
-                      <p class="read-btn-text">Read more</p>
-                      <p class="read-btn ms-3 m-0">
-                        <i class="fa-solid fa-arrow-right"></i>
-                      </p>
-                    </a>
-                  </div>
-                </div>
-                <div class="card-blog card">
-                  <img src="./imgs/Blog_3.png" class="card-img-top" alt="..." />
-                  <div class="card-body">
-                    <span class="card-time">MAY 30, 2022</span>
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">
-                      Some quick example text to build on the card title and
-                      make up the bulk of the card's content.
-                    </p>
-                    <a
-                      href="#"
-                      class="read-part d-flex h-auto text-decoration-none"
-                    >
-                      <p class="read-btn-text">Read more</p>
-                      <p class="read-btn ms-3 m-0">
-                        <i class="fa-solid fa-arrow-right"></i>
-                      </p>
-                    </a>
-                  </div>
-                </div>
-                <div class="card-blog card">
-                  <img src="./imgs/Blog_4.png" class="card-img-top" alt="..." />
-                  <div class="card-body">
-                    <span class="card-time">MAY 30, 2022</span>
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">
-                      Some quick example text to build on the card title and
-                      make up the bulk of the card's content.
-                    </p>
-                    <a
-                      href="#"
-                      class="read-part d-flex h-auto text-decoration-none"
-                    >
-                      <p class="read-btn-text">Read more</p>
-                      <p class="read-btn ms-3 m-0">
-                        <i class="fa-solid fa-arrow-right"></i>
-                      </p>
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <div class="cards-wrapper">
-                <div class="card-blog card">
-                  <img src="./imgs/Blog_4.png" class="card-img-top" alt="..." />
-                  <div class="card-body">
-                    <span class="card-time">MAY 30, 2022</span>
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">
-                      Some quick example text to build on the card title and
-                      make up the bulk of the card's content.
-                    </p>
-                    <a
-                      href="#"
-                      class="read-part d-flex h-auto text-decoration-none"
-                    >
-                      <p class="read-btn-text">Read more</p>
-                      <p class="read-btn ms-3 m-0">
-                        <i class="fa-solid fa-arrow-right"></i>
-                      </p>
-                    </a>
-                  </div>
-                </div>
-                <div class="card-blog card">
-                  <img src="./imgs/Blog_4.png" class="card-img-top" alt="..." />
-                  <div class="card-body">
-                    <span class="card-time">MAY 30, 2022</span>
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">
-                      Some quick example text to build on the card title and
-                      make up the bulk of the card's content.
-                    </p>
-                    <a
-                      href="#"
-                      class="read-part d-flex h-auto text-decoration-none"
-                    >
-                      <p class="read-btn-text">Read more</p>
-                      <p class="read-btn ms-3 m-0">
-                        <i class="fa-solid fa-arrow-right"></i>
-                      </p>
-                    </a>
-                  </div>
-                </div>
-                <div class="card-blog card">
-                  <img src="./imgs/Blog_4.png" class="card-img-top" alt="..." />
-                  <div class="card-body">
-                    <span class="card-time">MAY 30, 2022</span>
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">
-                      Some quick example text to build on the card title and
-                      make up the bulk of the card's content.
-                    </p>
-                    <a
-                      href="#"
-                      class="read-part d-flex h-auto text-decoration-none"
-                    >
-                      <p class="read-btn-text">Read more</p>
-                      <p class="read-btn ms-3 m-0">
-                        <i class="fa-solid fa-arrow-right"></i>
-                      </p>
-                    </a>
-                  </div>
-                </div>
-                <div class="card-blog card">
-                  <img src="./imgs/Blog_4.png" class="card-img-top" alt="..." />
-                  <div class="card-body">
-                    <span class="card-time">MAY 30, 2022</span>
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">
-                      Some quick example text to build on the card title and
-                      make up the bulk of the card's content.
-                    </p>
-                    <a
-                      href="#"
-                      class="read-part d-flex h-auto text-decoration-none"
-                    >
-                      <p class="read-btn-text">Read more</p>
-                      <p class="read-btn ms-3 m-0">
-                        <i class="fa-solid fa-arrow-right"></i>
-                      </p>
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div> -->
-      <!-- <button
-            class="carousel-control-prev"
-            type="button"
-            data-bs-target="#carouselExampleControls"
-            data-bs-slide="prev"
-          >
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button
-            class="carousel-control-next"
-            type="button"
-            data-bs-target="#carouselExampleControls"
-            data-bs-slide="next"
-          >
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        </div> -->
-
-      <!-- <div class="see-more d-flex justify-content-center">
-          <a class="" href="">SEE MORE</a>
-        </div>
-      </div> -->
-      <div class="container">
+      <div class="container mb-1">
         <div class="row text-center">
           <p class="fw-bold blogs-title">BLOGS</p>
         </div>
